# F1609-pose-tracking

./: .gitignore  README.md  pyproject.toml
artifacts/: README.md  manifest.json
config/: config.template.yaml  pose_cfg.template.yaml  pytorch_config.template.yaml
docs/: MODEL_CARD.zh-CN.md  PUBLISHING_CHECKLIST.md  REPRODUCIBILITY.zh-CN.md
reports/: P2_PLAN.zh-CN.md  P2_RESULT.zh-CN.md  RELEASE_SMOKE.md
research/: semantic_margin_experimental.py
scripts/: apply_tail_repair.py  prepare_dlc_project.py  run_inference.py  verify_checkpoint.py  verify_release.py
src/f1609/: __init__.py  checkpoint.py  tail_repair.py
tests/: test_checkpoint.py  test_tail_repair.py
